# CGExplore

./: .gitignore  .readthedocs.yaml  README.md  README.rst  environment.yml  justfile  make_graphs.py  make_graphs3.py  make_graphs4.py  make_graphs_2.py  mypy.ini  pyproject.toml  python311_env.yml  python39_env.yml  rtd311.yml  setup.py  test_environment.yml  test_script.py
.github/workflows/: publish_release.yml  tests.yml
archive/: cubism_model.py  fourplussix_model_optimisation.py  generate_all_cages.py  guest.py  hg4p6_backmap.py  hg4p6_model_optimisation.py  mnl2n_model.py  sphere_optimisation.py  unsymm_optimisation.py
archive/cube_construction/: cube.py
archive/mnl2n_construction/: plotting.py  topologies.py
archive/precursor_db/: precursors.py  threec_bb.mol  twoc_3_bb.mol  twoc_bb.mol
cgexplore/: __init__.py  analysis_utilities.py  beads.py  ea_plotters.py  ensembles.py  env_set.py  find_candidates.py  flexibility_parametizer.py  generate_2p4.py  generation_utilities.py  geom.py  openmm_optimizer.py  optimizer.py  plot_maps.py  plot_phase_spaces.py  pore.py  shape.py  utilities.py  visualisation.py
cgexplore/cage_construction/: __init__.py  plotting.py
cgexplore/molecule_construction/: __init__.py  topologies.py  utilities.py
cgexplore/precursor_db/: __init__.py  topologies.py  utilities.py
docs/source/: analysis.rst  atomistic.rst  avail_graphs.rst  cgexplore.rst  conf.py  databasing.rst  executables.rst  first_paper_example.rst  forcefields.rst  index.rst  modules.rst  molecular.rst  optimisation.rst  recipes.rst  scram.rst  systems_optimisation.rst  terms.rst  topologies.rst  utilities.rst
docs/source/_autosummary/: cgexplore.analysis.GeomMeasure.rst  cgexplore.analysis.ShapeMeasure.rst  cgexplore.analysis.fill_position_matrix.rst  cgexplore.analysis.fill_position_matrix_molecule.rst  cgexplore.analysis.get_dihedral.rst  cgexplore.analysis.get_shape_molecule_byelement.rst  cgexplore.analysis.get_shape_molecule_ligands.rst  cgexplore.analysis.get_shape_molecule_nodes.rst  cgexplore.analysis.known_shape_vectors.rst  cgexplore.analysis.rst  cgexplore.analysis.test_shape_mol.rst  cgexplore.atomistic.Crest.rst  cgexplore.atomistic.cgx_optimisation_sequence.rst  cgexplore.atomistic.extract_ditopic_ensemble.rst  cgexplore.atomistic.extract_ensemble.rst  cgexplore.atomistic.get_ditopic_aligned_bb.rst  cgexplore.atomistic.rst  cgexplore.atomistic.run_conformer_analysis.rst  cgexplore.forcefields.AssignedSystem.rst  cgexplore.forcefields.ForceField.rst  cgexplore.forcefields.ForceFieldLibrary.rst  cgexplore.forcefields.ForcedSystem.rst  (+180 more)
first_paper_example/: analysis.py  bead_libraries.py  define_forcefields.py  env_set.py  generate_2p3.py  generate_2p3_duplicate.py  generate_2p4.py  generate_3p4.py  generation.py  openmm_parametizer.py  plot_cages.py  plot_distributions.py  plot_energy_parity.py  plot_maps.py  plot_parities.py  plot_phase_spaces.py  plot_shape_analysis.py  plot_timings.py  save_to_chemiscope.py  shape_map.py  topologies.py
optimisation_example/: ligand_optimisation.py  optimsation_test.py  plot_ligand_outputs.py  visualise_ligands.py
src/: analyse_all_2cp3c.py  analyse_all_cages.py  analysis_utilities.py  beads.py  cubism_model.py  ea_module.py  ea_plotters.py  env_set.py  find_candidates.py  flexibility_parametizer.py  fourplussix_model.py  fourplussix_model_optimisation.py  generate_2p3.py  generate_2p4.py  generate_3p4.py  generate_all_2cp3c.py  generate_all_cages.py  generate_cages.py  generation_utilities.py  geom.py  guest.py  gulp_optimizer.py  hg4p6_backmap.py  hg4p6_model_optimisation.py  mnl2n_model.py  openmm_optimizer.py  openmm_parametizer.py  optimizer.py  plot_cages.py  plot_distributions.py  plot_maps.py  plot_parities.py  plot_phase_spaces.py  plot_shape_analysis.py  plot_timings.py  plotting.py  pore.py  shape.py  shape_map.py  sphere_optimisation.py  (+4 more)
src/cage_construction/: plotting.py  topologies.py
src/cgexplore/: __init__.py  _version.py  analysis.py  angles.py  assigned_system.py  atomistic.py  beads.py  bonds.py  databases.py  ensembles.py  errors.py  forcefield.py  forcefields.py  generation_utilities.py  geom.py  martini.py  molecular.py  molecule_construction.py  nonbonded.py  openmm_optimizer.py  optimisation.py  optimizer.py  pore.py  scram.py  shape.py  systems_optimisation.py  terms.py  topologies.py  torsions.py  utilities.py  visualisation.py
src/cube_construction/: plotting.py  symmetries.py
src/fourplusix_construction/: plotting.py  topologies.py
src/mnl2n_construction/: plotting.py  topologies.py
src/precursor_db/: corner_delta.mol  corner_lambda.mol  facebuildingblock.py  fourc_bb.mol  plane.mol  precursors.py  topologies.py
tests/assigned/: case_data.py  conftest.py  molecule0_assigned_tests_molecule0_syst_saved.xml  molecule1_assigned_tests_molecule1_syst_saved.xml  test_system_xml_writer.py  test_topology_xml_writer.py
tests/databases/: case_data.py  conftest.py  test.json  test_chemiscope.py  test_databasing.py
tests/ensemble/: case_data.py  conftest.py  test_ensemble.py  utilities.py
tests/ff_assignment/: case_data.py  conftest.py  test_present_torsions.py
tests/forcefield/: case_data.py  conftest.py  test_fflibrary.py  test_present_angles.py  test_present_bonds.py  test_present_custom_angles.py  test_present_custom_torsions.py  test_present_nonbondeds.py  test_present_torsions.py  test_xml_writer.py  utilities.py
tests/geom/: case_data.py  conftest.py  test_angles.py  test_bonds.py  test_max_diameter.py  test_minb2b.py  test_radius_gyration.py  test_torsions.py
tests/optimisers/: case_data.py  conftest.py  test_optimizer.py  test_xml_writer.py
tests/precursors/: case_data.py  conftest.py  test_bead_set.py  test_buildingblock.py  test_functional_groups.py  test_name.py
tests/scram/: case_data.py  conftest.py  test_bb_config.py  test_enumerate.py  test_layouts.py  test_topology_code.py
tests/shape/: case_data.py  conftest.py  test_shape.py  test_shape_molecule.py
tests/systems_optimisation/: case_data.py  conftest.py  test_chromosome_generator.py  test_generation.py
(+998 files in other folders)
