[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cgexplore"
maintainers = [
  { name = "Andrew Tarzia", email = "andrew.tarzia@gmail.com" },
]
dependencies = [
  "scipy",
  "matplotlib",
  "pandas",
  "scikit-learn",
  "stk",
  "stko",
  "atomlite",
  "chemiscope>0.7.3",
  "rustworkx",
]
requires-python = ">=3.11"
dynamic = ["version"]
readme = "README.md"

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pip-tools",
  # TODO: Remove pin when https://github.com/TvoroG/pytest-lazy-fixture/issues/65 is resolved.
  # pytest-lazy-fixture 0.6.0 is incompatible with pytest 8.0.0
  "pytest<8",
  "pytest-datadir",
  "pytest-lazy-fixture",
  "pytest-cov",
  "sphinx",
  "sphinx-copybutton",
  "twine",
  "sphinx_rtd_theme",
]

[project.scripts]
delete-property = "cgexplore._internal.scripts.delete_property:main"
get-energies = "cgexplore._internal.scripts.get_energies:main"
get-values = "cgexplore._internal.scripts.get_values:main"

[project.urls]
github = "https://github.com/andrewtarzia/CGExplore"

[tool.setuptools_scm]
write_to = "src/cgexplore/_version.py"

[tool.setuptools.packages.find]
where = [
  # list of folders that contain the packages (["."] by default)
  "src",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "COM812",
  "ISC001",
  "FBT001",
  "FBT002",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "S101",
  "INP001",
  "T201",
  "PLR0913",
]
"first_paper_example/*" = [
  "C901",
  "INP001",
  "ERA001",
  "ANN001",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
"optimisation_example/*" = [
  "D103",
  "C901",
  "INP001",
  "ERA001",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
"docs/source/conf.py" = ["D100", "INP001"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_functions = [
  "test_*",
]

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
disallow_any_generics = false

[[tool.mypy.overrides]]
module = [
  "rdkit.*",
  "scipy.*",
  "matplotlib.*",
  "pandas.*",
  "stk.*",
  "stko.*",
  "mchammer.*",
  "openmmtools.*",
  "openmm.*",
  "atomlite.*",
  "networkx.*",
  "martini_openmm.*",
  "pathos.*",
  "spindry.*",
  "vabene.*",
  "chemiscope.*",
]
ignore_missing_imports = true
