[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cgexplore"
maintainers = [{ name = "Andrew Tarzia", email = "andrew.tarzia@gmail.com" }]
dependencies = [
    "scipy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    # Added a new restriction (<2025.3.1 for rdkit because of changes in
    # rdkit's handling of metal-bonded/dative smiles) - done through manual testing.
    # This can change if updates to stk occur.
    "rdkit != 2024.3.5, <= 2024.9.1",
    "stk",
    "stko",
    "atomlite",
    "chemiscope>0.7.3",
    "rustworkx",
    "bbprepared",
    "openmm[cuda12]",
    # Added to handle uv issue with metadata.
    # From https://github.com/astral-sh/uv/issues/15876
    "OpenMM-CUDA-12",
    # Requirements to ensure installation with Python 3.13.
    "dgl==0.1.3"
]
requires-python = ">=3.11"
dynamic = ["version"]
readme = "README.rst"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pip-tools",
    # TODO: Remove pin when https://github.com/TvoroG/pytest-lazy-fixture/issues/65 is resolved.
    # pytest-lazy-fixture 0.6.0 is incompatible with pytest 8.0.0
    "pytest<8",
    "pytest-datadir",
    "pytest-lazy-fixture",
    "pytest-cov",
    "sphinx",
    "sphinx-copybutton",
    "twine",
    "sphinx_rtd_theme",
    "furo",
]

[project.scripts]
delete-property = "cgexplore._internal.scripts.delete_property:main"
get-energies = "cgexplore._internal.scripts.get_energies:main"
get-values = "cgexplore._internal.scripts.get_values:main"

[project.urls]
github = "https://github.com/andrewtarzia/CGExplore"

[tool.setuptools_scm]
write_to = "src/cgexplore/_version.py"

[tool.setuptools.packages.find]
where = [
    # list of folders that contain the packages (["."] by default)
    "src",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "COM812", "ISC001", "FBT001", "FBT002"]
exclude = ["src/cgexplore/_version.py"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "S101",
    "INP001",
    "T201",
    "PLR0913",
]
"first_paper_example/*" = [
    "C901",
    "INP001",
    "ERA001",
    "ANN001",
    "PLR0912",
    "PLR0913",
    "PLR0915",
]
"optimisation_example/*" = [
    "D103",
    "C901",
    "INP001",
    "ERA001",
    "PLR0912",
    "PLR0913",
    "PLR0915",
]
"docs/source/conf.py" = ["D100", "INP001"]

[tool.ruff.format]
exclude = ["src/cgexplore/_version.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
