[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cgexplore"
maintainers = [{ name = "Andrew Tarzia", email = "andrew.tarzia@gmail.com" }]
dependencies = [
    "numpy",
    "stk",
    "stko",
    "openmm[cuda12]",
    "OpenMM-CUDA-12",
    "chemiscope>0.7.3",
    "rustworkx",
    "bbprepared"
]
requires-python = ">=3.11"
dynamic = ["version"]
readme = "README.rst"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pip-tools",
    "pytest",
    "pytest-datadir",
    "pytest-cov",
    "sphinx",
    "sphinx-copybutton",
    "twine",
    "sphinx_rtd_theme",
    "furo",
    "moldoc",
]

[project.scripts]
delete-property = "cgexplore._internal.scripts.delete_property:main"
delete-entry = "cgexplore._internal.scripts.delete_entry:main"
get-energies = "cgexplore._internal.scripts.get_energies:main"
get-values = "cgexplore._internal.scripts.get_values:main"

[project.urls]
github = "https://github.com/andrewtarzia/CGExplore"
documentation = "https://cgexplore.readthedocs.io"

[tool.setuptools_scm]
write_to = "src/cgexplore/_version.py"

[tool.setuptools.packages.find]
where = [
    # list of folders that contain the packages (["."] by default)
    "src",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "COM812", "ISC001", "FBT001", "FBT002"]
exclude = ["src/cgexplore/_version.py"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "S101",
    "INP001",
    "T201",
    "PLR0913",
]
"first_paper_example/*" = [
    "C901",
    "INP001",
    "ERA001",
    "ANN001",
    "PLR0912",
    "PLR0913",
    "PLR0915",
]
"docs/source/conf.py" = ["D100", "INP001"]

[tool.ruff.format]
exclude = ["src/cgexplore/_version.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
disallow_any_generics = false

[[tool.mypy.overrides]]
module = [
  "pandas.*",
  "scipy.*",
  "matplotlib.*",
  "stk.*",
  "stko.*",
  "mchammer.*",
  "openmm.*",
  "atomlite.*",
  "networkx.*",
  "martini_openmm.*",
  "pathos.*",
  "vabene.*",
  "spindry.*",
  "chemiscope.*",
  "bbprep.*",
  "rmsd.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rdkit.*"
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true
